# POO2022-1JSCC

./: README.md
Ejercicio_Polimorfismo/: CMakeLists.txt  Circulo.cpp  Circulo.h  Cuadrado.cpp  Cuadrado.h  Figura_Geometrica.cpp  Figura_Geometrica.h  README.md  Rectangulo.cpp  Rectangulo.h  Rombo.cpp  Rombo.h  View.cpp  View.h  main.cpp
FigurasGeometricas/: Main.cpp  Original.cpp  circulo.cpp  circulo.h  makefile  menu.cpp  rectangulo.cpp  rectangulo.h  triangulo.cpp  triangulo.h
FigurasGeometricas/Controller/: FigurasController.cpp  FigurasController.h
FigurasGeometricas/Model/: Circulo.cpp  Circulo.h  Rectangulo.cpp  Rectangulo.h  Triangulo.cpp  Triangulo.h
FigurasGeometricas/View/: View.cpp  View.h
Figuras_geometricas/: CMakeLists.txt  Circulo.cpp  Circulo.h  Cuadrado.cpp  Cuadrado.h  Data.cpp  Data.h  Figuras.cpp  Figuras.h  Rectangulo.cpp  Rectangulo.h
LaFarra/: clases.hpp  main.cpp  makefile  productos.cpp
Payroll_system/: BasePlusCommissionEmployee.cpp  BasePlusCommissionEmployee.h  CMakeLists.txt  CommissionEmployee.cpp  CommissionEmployee.h  DailyEmployee.cpp  DailyEmployee.h  Employee.cpp  Employee.h  HourlyEmployee.cpp  HourlyEmployee.h  SalariedEmployee.cpp  SalariedEmployee.h  main.cpp
calentamiento/: 1.cpp  2.cpp  3.cpp
figuras/: main.cpp
